<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_Numbers">

    <EditText
        android:id="@+id/local_police"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/phone_ex"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/local_police"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/local_police"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:text="@string/local_medical"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/local_medical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/local_medical"
        android:layout_width="231dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/phone_ex"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:text="@string/local_state_highway"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/local_highway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/local_highway"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:hint="@string/phone_ex"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/local_utility"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/phone_ex"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="231dp"
        android:layout_height="42dp"
        android:layout_marginTop="108dp"
        android:text="@string/local_utility"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/local_utility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>